added more components and a component property system

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <div class="toolbar-section">
                 <button id="btn-simulate" class="btn">▶ Simulate</button>
                 <button id="btn-stop" class="btn">⏸ Stop</button>
-                <button id="btn-clear" class="btn">Clear</button>
             </div>
             <div class="toolbar-section">
                 <button id="btn-save" class="btn">💾 Save</button>
@@ -79,6 +78,7 @@
     <script src="src/engine/Simulator.js"></script>
     <script src="src/renderer/Renderer.js"></script>
     <script src="src/ui/Modal.js"></script>
+    <script src="src/ui/PropertiesPanel.js"></script>
     <script src="src/ui/InteractionManager.js"></script>
     <script src="src/app/App.js"></script>
     <script src="main.js"></script>
