--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <!-- Component Palette -->
             <div class="palette">
                 <h3>Components</h3>
+                <input type="text" id="component-search" class="component-search" placeholder="Search components...">
                 <div id="palette-content">
                     <!-- Dynamically populated by ComponentRegistry -->
                 </div>
