added reset button to reset state of the entire circuit

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="toolbar-section">
                 <button id="btn-simulate" class="btn">▶ Simulate</button>
                 <button id="btn-stop" class="btn">⏸ Stop</button>
+                <button id="btn-reset" class="btn">🔄 Reset</button>
             </div>
             <div class="toolbar-section">
                 <button id="btn-save" class="btn">💾 Save</button>
