added png export functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <button id="btn-save" class="btn">💾 Save</button>
                 <button id="btn-load" class="btn">📂 Load</button>
                 <button id="btn-import-subcircuit" class="btn">📥 Import Subcircuit</button>
+                <button id="btn-export-png" class="btn">🖼️ Export PNG</button>
             </div>
             <div class="toolbar-section">
                 <select id="circuit-select">
